# gmsh-reader

./: .gitignore  CMakeLists.txt  Makefile  README.md  read_MSH_file.cpp
data/: annular_1sto.msh  annular_2ndo.msh  annular_structured.geo  annular_structured_template.geo  annular_tritoquad.geo  annular_unstructured.geo  cavity_structured_template.geo  channel_structured_template.geo  compute_progression.pl  external_structured_template.geo  gen_annular_mesh.pl  gen_cavity_mesh.pl  gen_cavity_mesh_2.pl  gen_channel_mesh.pl  gen_external_mesh.pl  mesh_file.msh  tutorial4Backup.msh
src/: Makefile  main.cpp  read_MSH.h  read_MSH_Mesh.cpp  read_MSH_Mesh.h  read_MSH_file.cpp  read_MSH_file.h
